Add generated FNOL microservices code from Deep Agent Forgex: README.md